# articles_parser

./: .gitignore  README.md  __init__.py  cli.py  config.py  download.py  extract.py  inventory.py  patterns.py  pipeline.py  pyproject.toml  requirements.txt  utils.py
data/: inventory.csv
examples/: test.ipynb
search/: __init__.py  arxiv.py  crossref.py  europepmc.py  openalex.py  sciencedirect.py
